--- a/demo/reactjs/src/views/showing-click-times.liquid
+++ b/demo/reactjs/src/views/showing-click-times.liquid
@@ -1,14 +1,45 @@
-<header className="App-header">
-    {{ logo | image }}
-    <h2>Welcome {{name | capitalize}}</h2>
-    <p>Edit <code>src/App.js</code> and save to reload.</p>
-    <p>You have clicked {{clickCount}} times.</p>
-    <a
-        className="App-link"
-        href="https://reactjs.org"
-        target="_blank"
-        rel="noopener noreferrer"
-    >
-        Learn React
-    </a>
-</header>
+<div>
+    <header className="App-header">
+        <!-- {{ logo | image }} -->
+        <h2>{{general.brand | capitalize}}</h2>
+        <!-- <p>Edit <code>src/App.js</code> and save to reload.</p> -->
+        <p>{{ general.slogan }}</p>
+    </header>
+
+    <div class="product theme-3">
+        <div class="product__container">
+            <div class="product__row">
+                {% for product in products -%}
+                <div class="product__col">
+                    <div class="product__item">
+                        {{ product.image | image }}
+                        <p class="name">product name</p>
+                        <a href="#" class="link">View detail</a>
+                    </div>
+                </div>
+                {% endfor -%}
+            </div>
+        </div>
+    </div>
+    
+    <!-- {{ 'form-login' | form }} -->
+
+    <!-- <div>
+    <label for="customerEmail">Email Address</label>
+    <input type="email"
+        name="customer[email]"
+        id="customerEmail"
+        autocorrect="off"
+        autocapitalize="off"
+        autocomplete="email">
+    </div>
+    <div>
+    <label for="customerPassword">Password</label>
+    <input type="password"
+        name="customer[password]"
+        id="customerPassword">
+    </div>
+
+    <input type="submit" value="Sign In" /> -->
+
+</div>
