--- a/demo/reactjs/src/App.scss
+++ b/demo/reactjs/src/App.scss
@@ -13,18 +13,23 @@
   background-color: #282c34;
   height: 60px;
   display: flex;
-  flex-direction: column;
+  // flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
 }
 
-.App-header h2 {
+.App-header a {
   color: white;
   margin: 0;
+  font-size: 18px;
+  img {
+    width: 48px;
+  }
 }
 
 .product {
+  min-height: calc(100vh - 120px);
   &__container {
     max-width: 1200px;
     padding-left: 15px;
@@ -80,10 +85,72 @@
       width: calc(100% / 2);
     }
   }
+  &--detail {
+    img {
+      max-width: 100%;
+    }
+  }
+  &__form {
+    margin: auto;
+    width: 100%;
+    max-width: 320px;
+    padding-top: 24px;
+    label {
+      display: block;
+    }
+    input[type="number"] {
+      width: 100%;
+      max-width: 200px;
+      border: 1px solid var(--text-color);
+      outline: none;
+      height: 36px;
+      line-height: 36px;
+      font-size: 18px;
+      padding: 0 0 0 12px;
+      border-radius: 4px;
+    }
+    input[type="submit"] {
+      width: 100%;
+      max-width: 200px;
+      display: block;
+      border: none;
+      cursor: pointer;
+      margin-top: 12px;
+      background-color: var(--primary-color);
+      color: #fff;
+      height: 36px;
+      line-height: 36px;
+      border-radius: 4px;
+    }
+  }
 
   background-color: var(--background-color);
-  p {
+  p, h2, label {
     color: var(--text-color);
   }
 }
 
+
+.col {
+  &-xs-12 {
+    float: left;
+    width: 50%;
+  }
+}
+
+.app-footer {
+  text-align: center;
+  padding: 12px 0;
+  background-color: var(--background-color);
+  &.theme-2 {
+    --background-color: #404040;
+    --text-color: #fff;
+  }
+  &.theme-3 {
+    --background-color: #dcdcdc;
+    --text-color: #141414;
+  }
+  p {
+    color: var(--text-color);
+  }
+}
