implement page news, contact

--- a/demo/reactjs/src/views/showing-click-times.liquid
+++ b/demo/reactjs/src/views/showing-click-times.liquid
@@ -8,7 +8,7 @@
                 <div class="product__col">
                     <div class="product__item">
                         {{ product.image | image }}
-                        <p class="name">product name</p>
+                        <p class="name">{{ product.name }}</p>
                         <a href="/product/{{ product.id }}" class="link">View detail</a>
                     </div>
                 </div>
