--- a/demo/reactjs/src/App.scss
+++ b/demo/reactjs/src/App.scss
@@ -1,4 +1,5 @@
 @import '~antd/dist/antd.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
 :root {
   --primary-color: #282c34;
@@ -9,14 +10,48 @@
   margin: 0;
   padding: 0;
 }
+body {
+  // background-image: linear-gradient(to right, $regal-blue, $san-juan);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  font-family: 'Roboto', sans-serif;
+}
 .App-header {
   background-color: #282c34;
   height: 60px;
   display: flex;
-  // flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   color: white;
+  padding: 0 16px;
+  .brand {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    img {
+      margin-right: 8px;
+    }
+    p {
+      margin: 0;
+    }
+  }
+  .menu {
+    list-style: none;
+    margin-bottom: 0;
+    height: 100%;
+    line-height: 60px;
+    li {
+      display: inline-block;
+      margin-left: 24px;
+      a {
+        font-size: 14px;
+        &:hover {
+          color: #1890ff;
+        }
+      }
+    }
+  }
 }
 
 .App-header a {
@@ -39,6 +74,8 @@
   &__row {
     margin-left: -15px;
     margin-right: -15px;
+    display: flex;
+    flex-wrap: wrap;
     &::after, &::before {
       content: '';
       display: table;
@@ -86,6 +123,7 @@
     }
   }
   &--detail {
+    padding-top: 24px;
     img {
       max-width: 100%;
     }
@@ -127,6 +165,7 @@
   background-color: var(--background-color);
   p, h2, label {
     color: var(--text-color);
+    margin-bottom: 0;
   }
 }
 
@@ -135,6 +174,10 @@
   &-xs-12 {
     float: left;
     width: 50%;
+  }
+  &-xs-24 {
+    float: left;
+    width: 100%;
   }
 }
 
@@ -152,5 +195,38 @@
   }
   p {
     color: var(--text-color);
+  }
+}
+
+.contact {
+  &__form {
+    width: 100%;
+    max-width: 320px;
+    margin: 24px auto 0;
+    input, textarea {
+      width: 100%;
+      border: 1px solid var(--text-color);
+      outline: none;
+      height: 36px;
+      line-height: 36px;
+      font-size: 18px;
+      padding: 0 0 0 12px;
+      border-radius: 4px;
+      margin-bottom: 12px;
+    }
+    textarea {
+      height: 108px;
+    }
+    input[type="submit"] {
+      border: none;
+      cursor: pointer;
+      margin-top: 12px;
+      background-color: var(--primary-color);
+      color: #fff;
+    }
+    label {
+      margin-bottom: 4px;
+      display: block;
+    }
   }
 }
